--- a/Nomad/View Controllers/Entries/AddEntryViewController.xib
+++ b/Nomad/View Controllers/Entries/AddEntryViewController.xib
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddEntryViewController" customModule="Nomad" customModuleProvider="target">
             <connections>
-                <outlet property="entryLable" destination="WyC-Hk-hDq" id="ZTU-GW-Zxz"/>
-                <outlet property="entryTextBox" destination="wSf-7H-nTL" id="7cF-QQ-fN7"/>
-                <outlet property="infoLable" destination="ioj-Da-YbD" id="VnS-DH-726"/>
-                <outlet property="infoTextBox" destination="ZpU-EF-mlT" id="VY6-jl-iDs"/>
-                <outlet property="photoImageView" destination="QYp-5L-Kn9" id="B5J-db-38O"/>
-                <outlet property="photoLable" destination="vpY-xq-BYI" id="aQt-dt-8fR"/>
-                <outlet property="selectImageFromPhotoLibrary" destination="SYo-g6-nYs" id="TrM-rI-Bvd"/>
-                <outlet property="titleTextBox" destination="wSf-7H-nTL" id="hRi-Ds-IdQ"/>
+                <outlet property="infoTextBox" destination="6vH-8e-c6a" id="Ujg-r1-PS7"/>
+                <outlet property="photoImageView" destination="c3t-d3-SZj" id="x43-ZL-uPL"/>
+                <outlet property="titleTextBox" destination="WZM-BE-3jh" id="XCv-5t-TQy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -24,62 +18,65 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyC-Hk-hDq">
-                    <rect key="frame" x="8" y="34" width="78" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Decription" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioj-Da-YbD">
-                    <rect key="frame" x="7" y="98" width="80" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Description on this Entry" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZpU-EF-mlT">
-                    <rect key="frame" x="7" y="127" width="584" height="120"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" keyboardAppearance="light" returnKeyType="done"/>
-                </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpY-xq-BYI">
-                    <rect key="frame" x="8" y="255" width="47" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSf-7H-nTL">
-                    <rect key="frame" x="8" y="60" width="584" height="30"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="QYp-5L-Kn9">
-                    <rect key="frame" x="7" y="284" width="300" height="300"/>
-                    <gestureRecognizers/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Y1e-GC-gID">
+                    <rect key="frame" x="8" y="83" width="584" height="502"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Spr-5e-wKF">
+                            <rect key="frame" x="0.0" y="0.0" width="43" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WZM-BE-3jh">
+                            <rect key="frame" x="0.0" y="33" width="584" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="yes" enablesReturnKeyAutomatically="YES"/>
+                        </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t4x-Y7-7dO">
+                            <rect key="frame" x="0.0" y="75" width="93" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6vH-8e-c6a">
+                            <rect key="frame" x="0.0" y="107" width="584" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Im7-mT-md1">
+                            <rect key="frame" x="0.0" y="149" width="50" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="c3t-d3-SZj">
+                            <rect key="frame" x="0.0" y="182" width="320" height="320"/>
+                            <gestureRecognizers/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="ScR-YA-uie" appends="YES" id="qzj-fW-x70"/>
+                            </connections>
+                        </imageView>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="QYp-5L-Kn9" secondAttribute="height" multiplier="53:28" id="fqn-2q-1gq"/>
-                        <constraint firstAttribute="width" secondItem="QYp-5L-Kn9" secondAttribute="height" multiplier="1:1" id="nAi-bj-00k"/>
+                        <constraint firstItem="6vH-8e-c6a" firstAttribute="leading" secondItem="Y1e-GC-gID" secondAttribute="leading" id="6Yb-kR-6xl"/>
+                        <constraint firstItem="WZM-BE-3jh" firstAttribute="leading" secondItem="Y1e-GC-gID" secondAttribute="leading" id="7rb-W9-S69"/>
+                        <constraint firstAttribute="trailing" secondItem="WZM-BE-3jh" secondAttribute="trailing" id="ShT-lN-e9B"/>
+                        <constraint firstAttribute="trailing" secondItem="6vH-8e-c6a" secondAttribute="trailing" id="gYY-jR-HMh"/>
                     </constraints>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="SYo-g6-nYs" appends="YES" id="5it-mp-I1g"/>
-                    </connections>
-                </imageView>
+                </stackView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottomMargin" secondItem="wSf-7H-nTL" secondAttribute="bottom" constant="8" id="0jW-lq-GHh"/>
-                <constraint firstItem="WyC-Hk-hDq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="72" id="Hj2-Vg-CvR"/>
-                <constraint firstItem="wSf-7H-nTL" firstAttribute="top" secondItem="WyC-Hk-hDq" secondAttribute="bottom" constant="8" id="N1V-3M-gfO"/>
-                <constraint firstItem="wSf-7H-nTL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="8" id="bLe-qA-875"/>
-                <constraint firstItem="QYp-5L-Kn9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bvA-Xt-rKH"/>
-                <constraint firstItem="WyC-Hk-hDq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="8" id="c4T-w9-CMC"/>
-                <constraint firstItem="wSf-7H-nTL" firstAttribute="top" secondItem="WyC-Hk-hDq" secondAttribute="bottom" constant="8" id="dzG-Wf-zVV"/>
-                <constraint firstItem="QYp-5L-Kn9" firstAttribute="top" secondItem="vpY-xq-BYI" secondAttribute="bottom" constant="12" id="gJc-dR-7Qw"/>
-                <constraint firstAttribute="bottom" secondItem="QYp-5L-Kn9" secondAttribute="bottom" id="z6G-DZ-6Bq"/>
+                <constraint firstItem="Y1e-GC-gID" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="588-b9-rlM"/>
+                <constraint firstAttribute="trailingMargin" secondItem="Y1e-GC-gID" secondAttribute="trailing" id="EXH-0l-sqY"/>
+                <constraint firstItem="Y1e-GC-gID" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="G6h-mt-r8b"/>
+                <constraint firstItem="Y1e-GC-gID" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="I7E-vw-AW1"/>
+                <constraint firstItem="Y1e-GC-gID" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="75" id="L8G-dd-9Al"/>
             </constraints>
         </view>
-        <tapGestureRecognizer id="SYo-g6-nYs">
+        <tapGestureRecognizer id="ScR-YA-uie">
             <connections>
-                <action selector="selectImageFromPhotoLibrary:" destination="-1" id="1Hh-Um-3be"/>
+                <action selector="selectImage:" destination="-1" id="i9K-JN-xkT"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
