--- a/Nomad/View Controllers/HomeViewController.xib
+++ b/Nomad/View Controllers/HomeViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
@@ -9,7 +9,7 @@
                 <outlet property="addEntryButton" destination="9nE-do-6Fq" id="LRJ-s9-pSr"/>
                 <outlet property="startButton" destination="VrE-gP-LGa" id="wMW-Wm-vjf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="viewTripsButton" destination="IXg-jV-QNZ" id="Auf-Yl-faf"/>
+                <outlet property="viewTripsButton" destination="yuO-XP-LMx" id="Swl-sh-brO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -59,12 +59,24 @@
                         <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="TKc-Jn-7KL"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-XP-LMx">
+                    <rect key="frame" x="8" y="366" width="584" height="30"/>
+                    <color key="backgroundColor" red="1" green="0.91171825279572793" blue="0.92468461085826348" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" title="View Entries">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="oqM-hM-r02"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="yuO-XP-LMx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="1NG-3d-lhI"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="top" secondItem="B38-Vg-rme" secondAttribute="bottom" constant="8" id="4OY-Ml-msN"/>
                 <constraint firstAttribute="trailing" secondItem="Arz-OU-7K2" secondAttribute="trailing" constant="8" id="4R6-CM-oyS"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7KK-yG-MBH"/>
+                <constraint firstItem="9nE-do-6Fq" firstAttribute="top" secondItem="yuO-XP-LMx" secondAttribute="bottom" constant="26" id="8wm-Ee-Nt1"/>
                 <constraint firstAttribute="trailing" secondItem="B38-Vg-rme" secondAttribute="trailing" constant="8" id="Bhy-Nm-yV9"/>
                 <constraint firstItem="B38-Vg-rme" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="EDb-Ve-Y28"/>
                 <constraint firstItem="9nE-do-6Fq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="FIO-EO-9uG"/>
@@ -81,6 +93,7 @@
                 <constraint firstAttribute="trailing" secondItem="VrE-gP-LGa" secondAttribute="trailing" constant="8" id="rxp-6k-3QT"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="tt6-5z-TCd"/>
                 <constraint firstAttribute="trailing" secondItem="IXg-jV-QNZ" secondAttribute="trailing" constant="8" id="vil-hi-Ng5"/>
+                <constraint firstAttribute="trailing" secondItem="yuO-XP-LMx" secondAttribute="trailing" constant="8" id="zxx-Nj-NNg"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
