--- a/Nomad/View Controllers/HomeViewController.xib
+++ b/Nomad/View Controllers/HomeViewController.xib
@@ -9,7 +9,7 @@
                 <outlet property="addEntryButton" destination="9nE-do-6Fq" id="LRJ-s9-pSr"/>
                 <outlet property="startButton" destination="VrE-gP-LGa" id="wMW-Wm-vjf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="viewTripsButton" destination="yuO-XP-LMx" id="Swl-sh-brO"/>
+                <outlet property="viewEntriesButton" destination="Wfs-rh-hJA" id="VQF-C7-eyB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -59,25 +59,24 @@
                         <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="TKc-Jn-7KL"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-XP-LMx">
-                    <rect key="frame" x="8" y="366" width="584" height="30"/>
-                    <color key="backgroundColor" red="1" green="0.91171825279572793" blue="0.92468461085826348" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wfs-rh-hJA">
+                    <rect key="frame" x="8" y="367" width="584" height="30"/>
+                    <color key="backgroundColor" red="0.84734324682865381" green="0.7952637312526305" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="View Entries">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="oqM-hM-r02"/>
+                        <action selector="viewEntriesTapped:" destination="-1" eventType="touchUpInside" id="KJi-v7-hgK"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="yuO-XP-LMx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="1NG-3d-lhI"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="top" secondItem="B38-Vg-rme" secondAttribute="bottom" constant="8" id="4OY-Ml-msN"/>
                 <constraint firstAttribute="trailing" secondItem="Arz-OU-7K2" secondAttribute="trailing" constant="8" id="4R6-CM-oyS"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7KK-yG-MBH"/>
-                <constraint firstItem="9nE-do-6Fq" firstAttribute="top" secondItem="yuO-XP-LMx" secondAttribute="bottom" constant="26" id="8wm-Ee-Nt1"/>
                 <constraint firstAttribute="trailing" secondItem="B38-Vg-rme" secondAttribute="trailing" constant="8" id="Bhy-Nm-yV9"/>
+                <constraint firstAttribute="trailing" secondItem="Wfs-rh-hJA" secondAttribute="trailing" constant="8" id="DIb-gS-vDo"/>
                 <constraint firstItem="B38-Vg-rme" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="EDb-Ve-Y28"/>
                 <constraint firstItem="9nE-do-6Fq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="FIO-EO-9uG"/>
                 <constraint firstItem="VrE-gP-LGa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Jsc-xI-sch"/>
@@ -87,13 +86,16 @@
                 <constraint firstItem="IXg-jV-QNZ" firstAttribute="top" secondItem="VrE-gP-LGa" secondAttribute="bottom" constant="25" id="RWZ-Jb-Pcv"/>
                 <constraint firstAttribute="trailing" secondItem="9nE-do-6Fq" secondAttribute="trailing" constant="8" id="VLo-yA-IgO"/>
                 <constraint firstItem="B38-Vg-rme" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="75" id="bM9-EF-YSK"/>
+                <constraint firstItem="Wfs-rh-hJA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="emc-4Z-KIR"/>
+                <constraint firstItem="Wfs-rh-hJA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="icR-d5-dtZ"/>
                 <constraint firstItem="VrE-gP-LGa" firstAttribute="top" secondItem="9nE-do-6Fq" secondAttribute="bottom" constant="25" id="nLZ-BH-4J4"/>
                 <constraint firstAttribute="bottom" secondItem="IXg-jV-QNZ" secondAttribute="bottom" constant="38" id="pWb-w2-ILc"/>
+                <constraint firstAttribute="trailing" secondItem="Wfs-rh-hJA" secondAttribute="trailing" constant="8" id="pZi-7G-TbX"/>
                 <constraint firstAttribute="trailing" secondItem="VrE-gP-LGa" secondAttribute="trailing" constant="8" id="rqO-tm-Y1P"/>
                 <constraint firstAttribute="trailing" secondItem="VrE-gP-LGa" secondAttribute="trailing" constant="8" id="rxp-6k-3QT"/>
                 <constraint firstItem="Arz-OU-7K2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="tt6-5z-TCd"/>
+                <constraint firstItem="9nE-do-6Fq" firstAttribute="top" secondItem="Wfs-rh-hJA" secondAttribute="bottom" constant="25" id="vTw-8I-i7X"/>
                 <constraint firstAttribute="trailing" secondItem="IXg-jV-QNZ" secondAttribute="trailing" constant="8" id="vil-hi-Ng5"/>
-                <constraint firstAttribute="trailing" secondItem="yuO-XP-LMx" secondAttribute="trailing" constant="8" id="zxx-Nj-NNg"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
