--- a/Nomad/View Controllers/MapViewController.xib
+++ b/Nomad/View Controllers/MapViewController.xib
@@ -11,15 +11,21 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Dh4-Ih-Aeq">
+                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Dh4-Ih-Aeq">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </mapView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Dh4-Ih-Aeq" secondAttribute="bottom" id="Oqt-ga-18P"/>
+                <constraint firstItem="Dh4-Ih-Aeq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="WDy-Z9-hnf"/>
+                <constraint firstAttribute="trailing" secondItem="Dh4-Ih-Aeq" secondAttribute="trailing" id="WRY-r1-iLz"/>
+                <constraint firstItem="Dh4-Ih-Aeq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ctj-BF-N0b"/>
+            </constraints>
         </view>
     </objects>
 </document>
