--- a/Nomad/View Controllers/HomeViewController.xib
+++ b/Nomad/View Controllers/HomeViewController.xib
@@ -62,7 +62,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wfs-rh-hJA">
                     <rect key="frame" x="8" y="367" width="584" height="30"/>
                     <color key="backgroundColor" red="0.84734324682865381" green="0.7952637312526305" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="View Entries">
+                    <state key="normal" title="View Current Trip">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
