--- a/Nomad/View Controllers/Entries/AddEntryViewController.xib
+++ b/Nomad/View Controllers/Entries/AddEntryViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -49,11 +49,11 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="c3t-d3-SZj">
+                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="c3t-d3-SZj">
                             <rect key="frame" x="0.0" y="182" width="320" height="320"/>
                             <gestureRecognizers/>
                             <connections>
-                                <outletCollection property="gestureRecognizers" destination="ScR-YA-uie" appends="YES" id="qzj-fW-x70"/>
+                                <outletCollection property="gestureRecognizers" destination="UiX-ut-d1S" appends="YES" id="pKB-Es-Mg5"/>
                             </connections>
                         </imageView>
                     </subviews>
@@ -78,14 +78,14 @@
                 <constraint firstItem="Y1e-GC-gID" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="75" id="L8G-dd-9Al"/>
             </constraints>
         </view>
-        <tapGestureRecognizer id="ScR-YA-uie">
-            <connections>
-                <action selector="selectImage:" destination="-1" id="i9K-JN-xkT"/>
-            </connections>
-        </tapGestureRecognizer>
         <tapGestureRecognizer id="gTc-fI-pOH">
             <connections>
                 <action selector="hideKeyboards:" destination="-1" id="K7B-Df-bd5"/>
+            </connections>
+        </tapGestureRecognizer>
+        <tapGestureRecognizer id="UiX-ut-d1S">
+            <connections>
+                <action selector="selectImage:" destination="-1" id="k7E-CL-A7n"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
